--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,6 +125,7 @@ jobs:
                 rapidjson-dev \
                 libssl-dev \
                 libboost-dev \
+                libxcb-randr0-dev \
                 libboost-system-dev \
                 libboost-filesystem-dev \
                 libpulse-dev \
