--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ else (USE_PACKAGE_MANAGER)
     find_package(OpenSSL REQUIRED)
 
     find_package(PajladaSerialize REQUIRED)
-    find_package(Signals REQUIRED)
+    find_package(PajladaSignals REQUIRED)
     find_package(Settings REQUIRED)
 
     if (BUILD_APP)
