--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(Chatterino2 VERSION 2.2.3)
 option(BUILD_APP "Build Chatterino2" ON)
 option(BUILD_TESTS "Build the tests for Chatterino2" OFF)
 option(USE_PACKAGE_MANAGER "Use conan for managing packages" OFF)
+option(USE_SYSTEM_PAJLADA_SETTINGS "Use system pajlada settings library" OFF)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -90,7 +91,15 @@ else (USE_PACKAGE_MANAGER)
 
     find_package(PajladaSerialize REQUIRED)
     find_package(PajladaSignals REQUIRED)
-    find_package(PajladaSettings REQUIRED)
+    if (USE_SYSTEM_PAJLADA_SETTINGS)
+        find_package(PajladaSettings REQUIRED)
+    else()
+        if (NOT EXISTS "${CMAKE_SOURCE_DIR}/lib/settings/CMakeLists.txt")
+            message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/settings/CMakeLists.txt")
+        endif()
+
+        add_subdirectory("${CMAKE_SOURCE_DIR}/lib/settings" EXCLUDE_FROM_ALL)
+    endif()
 
     if (BUILD_APP)
         find_package(LibCommuni REQUIRED)
